# Data-Structures-and-Algorithms-I

homework 1/: build.sh  homework 1.cbp  homework 1.depend  homework 1.layout  homework1.cpp  homework1.x  readme.md  test.cpp  test.h
homework 2/problem_1/: Makefile  homework1.cpp  test.cpp  test.h
homework 2/problem_2/: Makefile  base.cpp  base.h  classA.cpp  classA.h  classB.cpp  classB.h  main.cpp
homework 2/problem_3/: Makefile  card.h  circular_card.cpp  circular_card.h  rectangular_card.cpp  rectangular_card.h  test.cpp  test.h
homework 2/problem_4/: Makefile  MyMatrix.h  test.cpp  test.h
homework 3/: readme.md
homework 3/problem_1/src/: CMakeLists.txt  SingleLinkedList.cpp  SingleLinkedList.h
homework 3/problem_1/test/: CMakeLists.txt  unit_tests.cpp
homework 3/problem_2/: readme.md
homework 3/problem_2/src/: CMakeLists.txt  ListNode.h  SortedSingleLinkedList.cpp  SortedSingleLinkedList.h
homework 3/problem_2/test/: unit_tests.cpp
homework 3/problem_3/: CMakeLists.txt  readme.md
homework 3/problem_3/src/: Card.h  CardBag.h  CardBagInterface.h  CircularCard.h  RectangularCard.h
homework 3/problem_3/test/: CMakeLists.txt  unit_tests.cpp
homework 4/: readme.md
homework 4/problem_1/: CMakeLists.txt  readme.md
homework 4/problem_1/src/: Homework.h  ListNode.h  Queue.h  SingleLinkedList.h
homework 4/problem_1/test/: CMakeLists.txt  HomeworkTest.cpp  LinkedListTest.cpp  LinkedStackTest.cpp
homework 4/problem_2/: CMakeLists.txt  readme.md
homework 4/problem_2/src/: SingleLinkedList.cpp  SingleLinkedList.h
homework 4/problem_2/test/: unit_tests.cpp
homework 4/problem_3/: CMakeLists.txt  readme.md
homework 4/problem_3/src/: possible_paths.h
homework 4/problem_3/test/: CMakeLists.txt  unit_tests.cpp
homework 5/: readme.md
homework 5/problem_1/: readme.md
homework 5/problem_1/possible_parentheses/: CMakeLists.txt
homework 5/problem_1/possible_parentheses/src/: possible_parentheses.h
homework 5/problem_1/possible_parentheses/test/: unit_tests.cpp
homework 5/problem_2/: CMakeLists.txt  readme.md
homework 5/problem_2/src/: BinaryTree.h  LinkedStack.h  SingleLinkedList.cpp  SingleLinkedList.h  Stack.h  Tree.h  TreeNode.h
homework 5/problem_2/test/: BinaryTreeTest.cpp  CMakeLists.txt
homework 6/: github.txt  readme.md
homework 6/dictionary/: CMakeLists.txt  readme.md
homework 6/dictionary/src/: ArrayDictionary.h  DictionaryInterface.h  Entry.h
homework 6/dictionary/test/: CMakeLists.txt  unit_test.cpp
homework 6/sudoku/: CMakeLists.txt  readme.md
homework 6/sudoku/src/: sudoku.h
homework 6/sudoku/test/: unit_tests.cpp
homework 7/: readme.md
homework 7/mini_search_engine/: readme.md
homework 7/mini_search_engine/src/: search_engine.h
homework 7/mini_search_engine/test/: unit_tests.cpp
homework 7/sort_dependencies/: CMakeLists.txt  readme.md
homework 7/sort_dependencies/src/: CMakeLists.txt  DirectedGraph.cpp  DirectedGraph.h  LinkedStack.h  ListNode.h  SingleLinkedList.cpp  SingleLinkedList.h
homework 7/sort_dependencies/test/: CMakeLists.txt  DirectedGraphSortTest.cpp  LinkedListTest.cpp  LinkedStackTest.cpp
